--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-TOKEN=MTI3MjUzNDQzNjIxODU0MDA2NA.GeVrcb.s1n9NwFRvt4CMVCJtY6e82bQ3VjelmvDdY8yFU
+# Por favor, insira o token do seu bot do Discord aqui
+TOKEN=
